--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-URL_MONGODB="mongodb://localhost:3000/SkyLab_database"
+#url kết nối tới mongo
+URL_MONGODB=mongodb://localhost:3000/SkyLab_database
+URL_SERVER=mongodb+srv://hoangvhph29660:sktfaert123@cluster0.ec5tu4v.mongodb.net/
