--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "dotenv": "^16.4.1",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "firebase": "^10.8.0",
     "http-errors": "~1.6.3",
     "mongoose": "^8.1.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
