--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.4.1",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-validator": "^7.0.1",
     "firebase": "^10.8.0",
     "http-errors": "~1.6.3",
     "mongoose": "^8.1.1",
