--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
     "http-errors": "~1.6.3",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1"
