--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-react": "^7.24.1",
     "axios": "^1.6.8",
+    "babel-loader": "^9.1.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.1",
@@ -19,7 +23,11 @@
     "moment": "^2.30.1",
     "mongoose": "^8.1.1",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
