--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.1",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
@@ -25,7 +26,6 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
